--- a/Warden/Css/style.css
+++ b/Warden/Css/style.css
@@ -8,6 +8,8 @@ body {
     align-items: center;
     min-height: 100vh; 
     overflow-x: hidden;
+    overflow-y: hidden; 
+
 }
 
 main {
@@ -18,7 +20,6 @@ main {
     flex-direction: column;
     align-items: center;
     flex-grow: 1; 
-    overflow-y: auto; 
 }
 
 .card-row {
@@ -44,7 +45,6 @@ main {
     box-sizing: border-box; 
     cursor: pointer; 
     text-decoration: none;
-    transition: all 0.3s ease;
 }
 
 
