Commiting behalf of warden after finishing task

--- a/Warden/Css/manage-profile.css
+++ b/Warden/Css/manage-profile.css
@@ -80,3 +80,18 @@ button.btn:hover,
 a.btn:hover {
     background-color: #0055aa;
 }
+
+
+.error {
+  color: red;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.success {
+  color: green;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 10px;
+}
